[package]
name = "web-crawl-graph"
version = "0.1.0"
authors = ["Akritas Akritidis"]
edition = "2024"
repository = "https://github.com/MaanooAk/web-crawl-graph"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1.11.1"
rand = "0.9.0"
ctrlc = "3.4.5"
clap = { version = "4.5.35", features = ["cargo"] }
